# OpenVPCal

./: .gitattributes  .gitignore  .pylintrc  OpenVPCal.iss  README.md  build.bat  build.sh  build_dev.bat  build_dev.sh  compile.py  compile_dev.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/source/: conf.py  index.rst  open_vp_cal.resources.rst  open_vp_cal.rst  open_vp_cal.widgets.rst
src/open_vp_cal/: __init__.py  application_base.py  led_wall_settings.py  main.py  project_settings.py
src/open_vp_cal/core/: calibrate.py  constants.py  ocio_config.py  ocio_utils.py  resource_loader.py  structures.py  utils.py
src/open_vp_cal/framework/: auto_roi.py  configuraton.py  frame.py  generation.py  identify_separation.py  processing.py  sample_patch.py  sequence_loader.py  utils.py  validation.py
src/open_vp_cal/imaging/: imaging_utils.py  macbeth.py
src/open_vp_cal/resources/: AnalysisLayout_Windows.layout  DefaultLayout_Windows.layout  OpenVpCAL_Full_logo.psd  OpenVpCAL_small_logo.psd  Slate.exr  Slate_Text.nk  spg_pattern_basic_config.json
src/open_vp_cal/widgets/: __init__.py  bar_chart_widget.py  calibration_matrix_widget.py  colourspaces_widget.py  delta_e_widget.py  execution_widget.py  graph_widget.py  image_selection_widget.py  main_window.py  project_settings_widget.py  splash_screen.py  stage_widget.py  swatch_analysis_widget.py  timeline_widget.py  utils.py
src/spg/: main.py  projectSettings.py  query.py  spg.py
src/spg/PatternGenerators/: __init__.py  basePatternGenerator.py
src/spg/testing/: utils.py
src/spg/utils/: constants.py  imageUtils.py  resource_loader.py  threadingUtils.py
src/spg_icvfxpatterns/PatternGenerators/: __init__.py  alignment.py  bitdepth.py  checkboard.py  colorPatch.py  dataRange.py  exposureStops.py  frameCountSync.py  linearSteppedColors.py  linearSteppedRamp.py  movingBars.py  realBlackLevel.py  referenceImage.py
src/stageassets/: ledPanel.py  ledWall.py  rasterMap.py  utils.py
tests/: test_Frame.py  test_SamplePatch.py  test_calibrate.py  test_generation.py  test_led_wall_settings.py  test_main.py  test_ocio_utils.py  test_project_settings.py  test_projects.py  test_resource_loader.py  test_settings.json  test_utils.py
tests/resources/: Wall1_calibration_results.json  Wall1_samples.json  calibration_results.json  calibration_results0.json  settings.json  settings2.json
tests/resources/RED_NO_WhiteBalance_Test/: A100_C001_0623YC_001.01510793.exr  A100_C001_0623YC_001.01510798.exr  A100_C001_0623YC_001.01510799.exr  A100_C001_0623YC_001.01510801.exr  A100_C001_0623YC_001.01510805.exr  A100_C001_0623YC_001.01510806.exr  (+284 more)
tests/test_open_vp_cal/: test_Frame.py  test_IdentifySeperation.py  test_SamplePatch.py  test_SequenceLoader.py  test_application_base.py  test_calibrate.py  test_configuration.py  test_constants.py  test_core_utils.py  test_generation.py  test_imaging_utils.py  test_led_wall_settings.py  test_main.py  test_ocio_config.py  test_ocio_utils.py  test_processing.py  test_project_settings.py  test_projects.py  test_resource_loader.py  test_settings.json  test_spg.py  test_spg_integration.py  test_utils.py  test_validation.py
tests/test_stageassets/: test_ledPanel.py  test_ledWall.py  test_rasterMap.py  utils.py
tests/tests_spg/: test_basePatternGenerator.py  test_imageUtils.py  test_projectSettings.py  test_register.py  test_spg.py
tests/tests_spgicvfxpatterns/: test_alignment.py  test_bitdepth.py  test_checkboardGenerator.py  test_colorPatch.py  test_dataRange.py  test_exposureStops.py  test_frameSyncGenerator.py  test_linearSteppedColors.py  test_linearSteppedRamp.py  test_movingBars.py  test_raster_stitching.py  test_realBlackLevel.py  test_referenceImage.py  utils.py
(+7368 files in other folders)
