[project]
name = "openvpcal"
version = "1.3.0"
description = "OpenVPCal is an open-source calibration tool for In-Camera Visual Effects pipelines."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE.md" }
dependencies = [
    "colour-checker-detection>=0.2.1",
    "colour-science>=0.4.6",
    "matplotlib>=3.10.1",
    "opencolorio>=2.4.1",
    "openimageio==3.0.4.0",
    "packaging>=24.2",
    "pyinstaller>=6.12.0",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.8.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/Netflix/OpenVPCal"
Documentation = "https://github.com/Netflix/OpenVPCal"
Source = "https://github.com/Netflix/OpenVPCal"

[tool.ruff]
src = ["src"]
line-length = 88  # Match Black's default
target-version = "py311"  # Set your Python version

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
