[project]
name = "openvpcal"
version = "2.0.0"
description = "OpenVPCal is an open-source calibration tool for In-Camera Visual Effects pipelines."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE.md" }
dependencies = [
    "open-vp-cal-spg @ file:///${PROJECT_ROOT}/packages/spg",
    "open-vp-cal-spg-icvfxpatterns @ file:///${PROJECT_ROOT}/packages/spg_icvfxpatterns",
    "open-vp-cal-stageassets @ file:///${PROJECT_ROOT}/packages/stageassets",
    "open-vp-cal @ file:///${PROJECT_ROOT}/packages/open_vp_cal",
    "pyinstaller>=6.12.0",
    "pytest",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/Netflix/OpenVPCal"
Documentation = "https://github.com/Netflix/OpenVPCal"
Source = "https://github.com/Netflix/OpenVPCal"

[tool.ruff]
src = [
    "packages/open_vp_cal/src",
    "packages/spg/src",
    "packages/spg_icvfxpatterns/src",
    "packages/stageassets/src"
]
line-length = 88  # Match Black's default
target-version = "py311"  # Set your Python version

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
