[project]
name = "openvpcal"
version = "2.0.0"
description = "OpenVPCal is an open-source calibration tool for In-Camera Visual Effects pipelines."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license-files = ["LICENSE.md"]
dependencies = [
    "open-vp-cal-spg",
    "open-vp-cal-spg-icvfxpatterns", 
    "open-vp-cal-stageassets",
    "open-vp-cal",
    "pyinstaller>=6.12.0",
    "pytest",
    "ruff",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/Netflix/OpenVPCal"
Documentation = "https://github.com/Netflix/OpenVPCal"
Source = "https://github.com/Netflix/OpenVPCal"

[tool.ruff]
src = [
    "packages/open_vp_cal/src",
    "packages/spg/src",
    "packages/spg_icvfxpatterns/src",
    "packages/stageassets/src"
]
line-length = 88  # Match Black's default
target-version = "py311"  # Set your Python version

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.uv.sources]
open-vp-cal = { path = "packages/open_vp_cal" }
open-vp-cal-spg = { path = "packages/spg" }
open-vp-cal-spg-icvfxpatterns = { path = "packages/spg_icvfxpatterns" }
open-vp-cal-stageassets = { path = "packages/stageassets" }

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
